--- a/RcatProject/RcatRajasthan/.htaccess
+++ b/RcatProject/RcatRajasthan/.htaccess
@@ -1,12 +1,31 @@
 RewriteEngine On
 
-# Force HTTPS (uncomment in production)
-# RewriteCond %{HTTPS} off
-# RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+# Force HTTPS (enabled for production)
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-# Remove www (uncomment if needed)
-# RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-# RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
+# Redirect www to non-www for rcatrajasthan.com
+RewriteCond %{HTTP_HOST} ^www\.rcatrajasthan\.com [NC]
+RewriteRule ^(.*)$ https://rcatrajasthan.com/$1 [L,R=301]
+
+# Security Headers for Production
+<IfModule mod_headers.c>
+    # Prevent clickjacking
+    Header always append X-Frame-Options DENY
+    
+    # Prevent MIME type sniffing
+    Header set X-Content-Type-Options nosniff
+    
+    # Enable XSS protection
+    Header set X-XSS-Protection "1; mode=block"
+    
+    # Referrer Policy
+    Header set Referrer-Policy "strict-origin-when-cross-origin"
+    
+    # Remove server information
+    Header unset Server
+    Header unset X-Powered-By
+</IfModule>
 
 # Block access to sensitive files
 <FilesMatch "(\.htaccess|\.htpasswd|\.ini|\.log|\.sql|\.json)$">
